<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/log" />
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/reservation" />
        <item
            android:id="@+id/nav_counseling"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/myReservation" />
        <item
            android:id="@+id/nav_modify_info"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/modify_info" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
