<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CounselingWriteActivity">

    <EditText
        android:id="@+id/frag_counseling_write_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/counseling_write_titleHint"/>

    <EditText
        android:id="@+id/frag_counseling_write_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:hint="@string/counseling_write_contentHint"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/frag_counseling_write_left_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/frag_counseling_comment_cancel"/>

        <Button
            android:id="@+id/frag_counseling_write_center_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/frag_counseling_comment_ImageAdd"/>

        <Button
            android:id="@+id/frag_counseling_write_right_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/MaterialFlatButton"
            android:text="@string/frag_counseling_comment_commit"/>

    </LinearLayout>

</LinearLayout>