<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NaviResActivity">

    <CalendarView
        android:id="@+id/nav_res_calendarView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_res_day"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nav_res_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_date_value"
                android:textSize="25sp"
                android:textColor="#000" />

            <TextView
                android:id="@+id/nav_res_undone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#F00"
                android:visibility="gone"
                android:text="(예약불가)"/>

            <TextView
                android:id="@+id/nav_res_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00F"
                android:visibility="visible"
                android:text="(예약가능)"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_res_time"/>

        <Spinner
            android:id="@+id/nav_res_TimeSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp">
        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_res_designer"/>

        <Spinner
            android:id="@+id/nav_res_DesignerSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp">
        </Spinner>

        <Button
            android:id="@+id/nav_res_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reservation"/>

    </LinearLayout>

</LinearLayout>