<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:paddingStart="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="25sp"
                android:text="@string/nav_res_day"
                android:textSize="20sp"
                android:textColor="#000"
                android:gravity="center|start"/>
            <TextView
                android:id="@+id/nav_res_myres_tv1"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="25sp"
                android:textSize="20sp"
                android:gravity="center|start"
                android:text="@string/isNull"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="25sp"
                android:text="@string/nav_res_time"
                android:textSize="20sp"
                android:textColor="#000"
                android:gravity="center|start"/>
            <TextView
                android:id="@+id/nav_res_myres_tv2"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="25sp"
                android:textSize="20sp"
                android:gravity="center|start"
                android:text="@string/isNull"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="25sp"
                android:text="@string/nav_res_designer"
                android:textSize="20sp"
                android:textColor="#000"
                android:gravity="center|start"/>
            <TextView
                android:id="@+id/nav_res_myres_tv3"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="25sp"
                android:textSize="20sp"
                android:gravity="center|start"
                android:text="@string/isNull"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="25sp"
                android:text="@string/nav_res_id"
                android:textSize="20sp"
                android:textColor="#000"
                android:gravity="center|start"/>
            <TextView
                android:id="@+id/nav_res_myres_tv4"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="25sp"
                android:textSize="20sp"
                android:gravity="center|start"
                android:text="@string/isNull"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/nav_res_myres_delete_btn"
        android:layout_width="0dp"
        android:layout_height="100sp"
        android:layout_weight="1"
        android:text="@string/nav_res_cancel"/>
</LinearLayout>